# mrai-agent

./: .gitignore  pyproject.toml  requirements.txt
agent/: agent.py  schema.py
agent/flow/: base_flow.py  ez_agent_flow.py
agent/llm/: llm.py  llm_config.py
agent/tool/: assign_agent_tool.py  terminate_tool.py
blog/yi/: 一起学LLM Agent - 壹.md
mrai/agent/: agent.py  schema.py
mrai/agent/flow/: agent_flow.py  base_flow.py  realtime_call_agent_flow.py
mrai/agent/llm/: llm.py  llm_config.py  prompt.py
mrai/agent/tool/: assign_agent_tool.py  terminate_tool.py
mrai/interaction/office/: __init__.py  excel_tools.py  word_tools.py
tests/: llm_test.py
tests/tool/: file_saver.py
