    [build-system]
    requires = ["setuptools>=61.0"]
    build-backend = "setuptools.build_meta"

    [project]
    name = "mrai-agent" # 或者你希望的包名
    version = "0.1.0"   # 初始版本号
    authors = [
        { name="Fetters", email="ftfetters@gmail.com" },
    ]
    description = "A rapid development framework for large model intelligent agents"
    readme = "README.md" # 如果你有 README 文件
    requires-python = ">=3.8" # 指定你的项目兼容的 Python 版本
    license = "MIT"  # 使用SPDX许可证标识符
    classifiers = [
        "Programming Language :: Python :: 3",
        "Operating System :: OS Independent",
    ]
    dependencies = [
        "annotated-types>=0.7.0",
        "anyio>=4.8.0",
        "certifi>=2025.1.31",
        "charset-normalizer>=3.4.1",
        "click>=8.1.8",
        "distro>=1.9.0",
        "exa-py>=1.11.0",
        "h11>=0.14.0",
        "httpcore>=1.0.7",
        "httpx>=0.28.1",
        "httpx-sse>=0.4.0",
        "idna>=3.10",
        "iniconfig>=2.1.0",
        "jiter>=0.9.0",
        "loguru>=0.7.3",
        "mcp>=1.5.0",
        "openai>=1.66.3",
        "packaging>=24.2",
        "pluggy>=1.5.0",
        "psutil>=7.0.0",
        "pydantic>=2.10.6",
        "pydantic-settings>=2.8.1",
        "pydantic_core>=2.27.2",
        "pytest>=8.3.5",
        "pytest-mock>=3.14.0",
        "python-dotenv>=1.0.1",
        "requests>=2.32.3",
        "sniffio>=1.3.1",
        "socksio>=1.0.0",
        "sse-starlette>=2.2.1",
        "starlette>=0.46.1",
        "tqdm>=4.67.1",
        "typing_extensions>=4.12.2",
        "urllib3>=2.3.0",
        "uvicorn>=0.34.0"
    ]

    # 可选的开发依赖项
    [project.optional-dependencies]
    dev = [
        "pytest",
        # 其他开发或测试时需要的包
    ]

    [project.urls]
    "Homepage" = "https://github.com/FT-Fetters/mrai-agent" # 项目主页或仓库地址
    "Bug Tracker" = "https://github.com/FT-Fetters/mrai-agent/issues"

    [tool.setuptools]
    # 将根目录映射为包的根目录
    package-dir = {"" = "."}

    [tool.setuptools.packages.find]
    where = ["."]  # 在项目根目录查找包
    include = ["mrai*"]  # 包含mrai及其子包

    # 如果你想让别人 import mrai_agent.xxx, 你需要将 agent/ 重命名为 mrai_agent/
    # 通过 package-dir 配置，我们告诉 setuptools 'mrai' 包的代码在 'agent' 目录下